mobile overflow fix

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -25,3 +25,7 @@ body {
 main {
     flex: 1 0 auto;
 }
+
+main > img,div,span,iframe,video{
+    overflow-x: scroll;
+}
