--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -15,6 +15,9 @@ td, th {
     text-align: left;
     padding: 8px;
 }
+table{
+    overflow-x: scroll;
+}
 tr:nth-child(1)
 {
     border-bottom: 1px solid #000000;
