--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -15,3 +15,7 @@ main {
     flex: 1 0 auto;
     margin-top: 100px;
 }
+
+main > img,div,span,iframe,video{
+    overflow-x: scroll;
+}
